# iLoveExcel

./: .gitignore  DEPLOYMENT_OPTIONS.md  GUI_START_GUIDE.md  INSTALL.md  LICENSE  MANIFEST.in  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt  start_gui.bat  start_gui.sh  streamlit_app.py
build-venv/: pyvenv.cfg
cleanup/: 3BRANCH_STRATEGY.md  CLEANUP_PLAN.md  CLEANUP_REPORT.md  CLEANUP_REPORT_TEMPLATE.md  DELIVERABLES_SUMMARY.md  EXECUTION_GUIDE.md  START_HERE.md  cleanup_candidates.md  cleanup_state.txt  pyproject.toml.patch
cleanup/removed_files/docs_packaging/: notes.md
cleanup/removed_files/docs_redundant/: IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md
cleanup/removed_files/docs_ui_mockups/: csv_diff_mockup.md
cleanup/removed_files/gui_pysimplegui/: README.md
cleanup/removed_files/packaging_alternate/: README.md
cleanup/test_results/: test_status_20251115_022203.txt
examples/: demo.py  demo_run.bat  demo_run.sh  employees.csv  projects.csv  sample1.csv  sample2.csv
packaging/: README.md  build_with_pyinstaller.bat  build_with_pyinstaller.sh
scripts/: build_wheel.bat  build_wheel.sh  cleanup_create_3branch_setup.sh  cleanup_create_branch_and_backup.bat  cleanup_create_branch_and_backup.sh  cleanup_revert.sh  cleanup_run_tests.sh  cleanup_scan_candidates.sh  install_from_wheel.bat  install_from_wheel.sh
src/iLoveExcel/: __init__.py  __main__.py  cli.py  diffs.py  excel_merge.py  gui.py  gui_common.py  gui_launcher.py  gui_tk.py  io.py  io_helpers.py  joins.py  unions.py  utils.py
tests/: __init__.py  test_auto_width.py  test_diffs.py  test_io.py  test_joins.py  test_unions.py
